--- a/index.html
+++ b/index.html
@@ -411,6 +411,51 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 <p><a href="https://developer.chrome.com/docs/devtools/">https://developer.chrome.com/docs/devtools/</a></p>
 </section>
   </div>
+  <div class="slide hidden -" id="slide-3">
+    <section class="slide-content"><h1 id="-">Обзор</h1>
+<p><img src="figures/overview.png" alt=""></p>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-4">
+    <section class="slide-content"><h1 id="css">CSS</h1>
+<p><a href="https://developer.chrome.com/docs/devtools/css/">https://developer.chrome.com/docs/devtools/css/</a></p>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-5">
+    <section class="slide-content"><h1 id="dom">DOM</h1>
+<p><a href="https://developer.chrome.com/docs/devtools/dom/">https://developer.chrome.com/docs/devtools/dom/</a></p>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-6">
+    <section class="slide-content"><h1 id="-">Задача</h1>
+<ul>
+<li>Зайди на <a href="https://www.nytimes.com/">nytimes.com</a></li>
+<li>Перейди по ссылке в любую статью</li>
+<li>Статья будет перекрыта заглушкой</li>
+<li>Пользуясь вкладкой Elements удали баннер и сделай статью читаемой</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-7">
+    <section class="slide-content"><h1 id="-">Задача</h1>
+<ul>
+<li>Зайди в чужой профиль в твиттере, например <a href="https://twitter.com/xoposhiy">Павел Егоров</a> или <a href="https://twitter.com/elonmusk">Elon Musk</a></li>
+<li>Добавь или удали статус верифицированного аккаунта</li>
+<li>Измени количество подписчиков</li>
+<li>Перейди в любой твит и отредактируй его<ul>
+<li>добавь твиту лайков</li>
+<li>измени время публикации</li>
+<li>добавь в текст ссылку или упоминание</li>
+<li>измени устройство с которого был послан твит</li>
+</ul>
+</li>
+<li>Твиттер позволяет выбирать из 3 цветов фона и 6 акцентных цветов, найди нужные css классы и исправь в них цвета на свои</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-8">
+    <section class="slide-content"></section>
+  </div>
 
   <div class="controls">
     <div class="arrow prev"></div>
