feat: finish slides

--- a/index.html
+++ b/index.html
@@ -409,6 +409,9 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   <div class="slide hidden -" id="slide-2">
     <section class="slide-content"><h1 id="chrome-devtools">Chrome DevTools</h1>
 <p><a href="https://developer.chrome.com/docs/devtools/">https://developer.chrome.com/docs/devtools/</a></p>
+<blockquote>
+<p>pro tip: <code>Control/Command + Shift + P</code></p>
+</blockquote>
 </section>
   </div>
   <div class="slide hidden -" id="slide-3">
@@ -454,7 +457,68 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 </section>
   </div>
   <div class="slide hidden -" id="slide-8">
-    <section class="slide-content"></section>
+    <section class="slide-content"><h1 id="console">Console</h1>
+<p><a href="https://developer.chrome.com/docs/devtools/console/">https://developer.chrome.com/docs/devtools/console/</a></p>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-9">
+    <section class="slide-content"><h1 id="network">Network</h1>
+<p><a href="https://developer.chrome.com/docs/devtools/network/">https://developer.chrome.com/docs/devtools/network/</a></p>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-10">
+    <section class="slide-content"><h1 id="-">Задача</h1>
+<ul>
+<li>Зайди на главную <a href="https://yandex.ru">Яндекса</a></li>
+<li>Узнай какие начертания шрифта загружаются на странице и заблокируй их</li>
+<li>Заблокируй все запросы на домен метрики</li>
+<li>Заблокируй все запросы в Дзен и видео-стримы</li>
+<li>Узнай какие JavaScript файлы загружаются для работы видеоплеера и заблокируй их</li>
+<li>Страница работает из без JQuery, заблокируй его</li>
+<li>Да и без React тоже можно поискать, заблокируй загрузку его рантайма и загрузку основного бандла :)</li>
+<li>Сравни количество загружаемых ресурсов с и без блокировки</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-11">
+    <section class="slide-content"><h1 id="storage">Storage</h1>
+<p><a href="https://developer.chrome.com/docs/devtools/storage/">https://developer.chrome.com/docs/devtools/storage/</a></p>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-12">
+    <section class="slide-content"><h1 id="device-mode">Device Mode</h1>
+<ul>
+<li><a href="https://developer.chrome.com/docs/devtools/device-mode/">https://developer.chrome.com/docs/devtools/device-mode/</a></li>
+<li><a href="https://developer.chrome.com/docs/devtools/remote-debugging/">https://developer.chrome.com/docs/devtools/remote-debugging/</a></li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-13">
+    <section class="slide-content"><h1 id="javascript">JavaScript</h1>
+<p><a href="https://developer.chrome.com/docs/devtools/javascript/">https://developer.chrome.com/docs/devtools/javascript/</a></p>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-14">
+    <section class="slide-content"><h1 id="performance">Performance</h1>
+<ul>
+<li><a href="https://developer.chrome.com/docs/devtools/evaluate-performance/">https://developer.chrome.com/docs/devtools/evaluate-performance/</a></li>
+<li><a href="https://developers.google.com/web/tools/lighthouse">https://developers.google.com/web/tools/lighthouse</a></li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-15">
+    <section class="slide-content"><h1 id="accessibility">Accessibility</h1>
+<p><a href="https://developer.chrome.com/docs/devtools/accessibility/reference/">https://developer.chrome.com/docs/devtools/accessibility/reference/</a></p>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-16">
+    <section class="slide-content"><h1 id="memory">Memory</h1>
+<p><a href="https://developer.chrome.com/docs/devtools/memory-problems/">https://developer.chrome.com/docs/devtools/memory-problems/</a></p>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-17">
+    <section class="slide-content"><p><a href="https://developer.chrome.com/docs/devtools/">https://developer.chrome.com/docs/devtools/</a></p>
+</section>
   </div>
 
   <div class="controls">
